[package]
name = "relua"
version = "0.1.0"
edition = "2021"

[features]
default = []

# Enable this feature to use the floor division operator `//` that was added in Lua 5.3.
idiv = []

extra_span = []

[dependencies]
peg = "0.8"

[dev-dependencies]
mlua = { version = "0.10", features = ["lua54", "vendored"] }
gilder = "0.1"
